# ovector

./: CMakeLists.txt  README.md  performance.md
benchmarks/: CMakeLists.txt  noopt.hpp  push_back.cpp  sum.cpp
include/mgrech/: ovector.hpp
source/: ovector.cpp
tests/: CMakeLists.txt  doctest.cpp  tests.cpp
